# millenium-falcon-challenge

./: Makefile  README.md  docker-compose.yml  get-odds.sh  millennium-falcon.json  openapi.json  start.sh
.github/workflows/: python-app.yml
cli/: __main__.py
core/: Dockerfile  pyproject.toml
core/cli/: __main__.py
core/core/parser/: parse_json.py
core/core/server/: app.py
core/core/shared/: models.py
core/core/solver/: solver.py
core/docker/: Dockerfile
core/falcon-solver/parser/: parse_universe.py
core/falcon-solver/server/: app.py  models.py
core/falcon-solver/server/odds/: endpoints.py
core/falcon-solver/solver/: solver.py
core/falcon_solver/parser/: parse_json.py  parse_universe.py
core/falcon_solver/server/: app.py  models.py
core/falcon_solver/server/odds/: endpoints.py
core/falcon_solver/shared/: __init__.py  models.py
core/falcon_solver/shared/resources/: millennium-falcon.json
core/falcon_solver/solver/: solver.py
core/tests/: conftest.py  pytest.ini  test_examples.py
core/tests/api/: test_api.py
core/tests/resources/: custom_empire.json  empire-1.json  empire-2.json  empire-4.json  invalid-empire.json  invalid-millennium-falcon.json  millennium-falcon.json
core/tests/solver/: test_custom.py  test_examples.py
core/tests/unit_tests/: test_json_parser.py  test_universe_parser.py
docker/: Dockerfile.backend.development  Dockerfile.backend.production
docs/: solver.md
frontend/: index.html  logic.js  style.css
frontend/nginx-config/: proxy.conf
