[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["jondavies00 <jonathandavies128@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2"
pytest = "*"
fastapi = "*"
uvicorn = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
