[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["jondavies00 <jonathandavies128@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1"
pytest = "*"
fastapi = "^0.88.0"
uvicorn = "*"
httpx = "*"
isort = "*"
black = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
